--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </div>
                             <div>
                                 <h5>Address</h5>
-                                <p>123 Welfare Road, Community District, City - 110001</p>
+                                <p>Dewan welfare society house, Dina Jhelum</p>
                             </div>
                         </div>
                         <div class="contact-item">
