--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dewan Welfare Society - Helping Those in Need</title>
+    <title>Dewan Welfare Society </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#programs">Programs</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#testimonials">Testimonials</a>
@@ -64,15 +64,15 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <h2 class="section-title">About Our Society</h2>
-                    <p>Founded in 2010, Dewan Welfare Society has been at the forefront of social change, working tirelessly to uplift marginalized communities across the region. Our team of dedicated professionals and volunteers believe in creating sustainable solutions to poverty, inequality, and lack of access to basic services.</p>
+                    <p>Founded in 2004, Dewan Welfare Society has been at the forefront of social change, working tirelessly to uplift marginalized communities in Sagri village and surroundings. Our team of dedicated professionals and volunteers believe in creating sustainable solutions to poverty, inequality, and lack of access to basic services.</p>
                     <p>We operate with transparency and accountability, ensuring that every donation reaches those who need it most. Our programs are designed to empower individuals and communities to break the cycle of poverty and build a better future.</p>
                     <div class="d-flex flex-wrap mt-4">
                         <div class="me-4 mb-3">
-                            <h3 class="text-primary">12+</h3>
+                            <h3 class="text-primary">20+</h3>
                             <p>Years of Service</p>
                         </div>
                         <div class="me-4 mb-3">
-                            <h3 class="text-primary">50+</h3>
+                            <h3 class="text-primary">25+</h3>
                             <p>Community Projects</p>
                         </div>
                         <div class="me-4 mb-3">
@@ -89,7 +89,7 @@
     <!-- Programs Section -->
     <section id="programs" class="programs">
         <div class="container">
-            <h2 class="section-title text-center mb-5">Our Programs</h2>
+            <h2 class="section-title text-center mb-5">Our Projects</h2>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3">
                     <div class="card">
@@ -300,7 +300,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <h5 class="text-white mb-4">About Dewan Welfare Society</h5>
-                    <p>Dewan Welfare Society is a registered non-profit organization dedicated to social welfare, education, healthcare, and community development since 2010.</p>
+                    <p>Dewan Welfare Society is a registered non-profit organization dedicated to social welfare, education, healthcare, and community development since 2004.</p>
                     <div class="mt-3">
                         <a href="#" class="btn btn-outline-light btn-sm me-2">Registration Certificate</a>
                         <a href="#" class="btn btn-outline-light btn-sm">Annual Report</a>
